<resources>
    <string name="app_name">Proyect DI</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="favorite">favorite</string>
    <string name="dashboard">dashboard</string>
    <string name="logout">logout</string>
    <string name="favourite">Favourite</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Logout">Logout</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="profile">Profile</string>
</resources>